--- a/src/app/features/blog/blog-detail/blog-detail.component.html
+++ b/src/app/features/blog/blog-detail/blog-detail.component.html
@@ -1,38 +1,42 @@
 <div class="blog-detail" *transloco="let t">
-  <div class="blog-detail__nav">
-    <eb-button variant="ghost" routerLink="/blog" [ariaLabel]="t('blog.detail.backAriaLabel')">
-      <ng-container icon>
-        <eb-icon [name]="ICONS.ARROW_LEFT" size="sm" />
-      </ng-container>
-      {{ t('blog.detail.backToList') }}
-    </eb-button>
-  </div>
-
   @if (article(); as article) {
     <article class="blog-detail__content">
-      <eb-card>
-        <header class="blog-detail__header" card-header>
-          <div class="blog-detail__meta">
-            <span class="blog-detail__category">{{ article.category | titlecase }}</span>
-            <span class="blog-detail__date">{{ article.publishedAt | date: 'mediumDate' }}</span>
+      <eb-card [hoverable]="false">
+        <header card-header>
+          <div class="blog-detail__header-actions">
+            <eb-button
+              routerLink="/blog"
+              [ariaLabel]="t('blog.detail.backAriaLabel')"
+              class="blog-detail__back"
+            >
+              <ng-container icon>
+                <eb-icon [name]="ICONS.ARROW_LEFT" size="sm" />
+              </ng-container>
+              {{ t('blog.detail.backToList') }}
+            </eb-button>
+
+            <!-- Top Navigation -->
+            <ng-container *ngTemplateOutlet="navControls; context: { $implicit: 'header' }" />
           </div>
+
           <h1 class="blog-detail__title">{{ article.title }}</h1>
-          <div class="blog-detail__author">
-            <div class="blog-detail__avatar">
-              {{ article.author.name.charAt(0) }}
-            </div>
-            <div class="blog-detail__author-info">
-              <span class="blog-detail__author-name">{{ article.author.name }}</span>
-              <span class="blog-detail__author-title">{{ article.author.title }}</span>
-            </div>
+
+          <div class="blog-detail__meta">
+            <span class="blog-detail__date">
+              {{ article.publishedAt | date: 'mediumDate' }}
+            </span>
+            <span class="blog-detail__separator">•</span>
+            <span class="blog-detail__read-time">
+              {{ t('blog.minRead', { minutes: article.readingTimeMinutes }) }}
+            </span>
           </div>
         </header>
 
-        <div class="blog-detail__body eb-markdown-content" card-body>
+        <div class="blog-detail__body" card-body>
           @if (contentLoading()) {
-            <p>{{ t('blog.detail.loading') }}</p>
+            <div class="blog-detail__loading">{{ t('blog.detail.loading') }}</div>
           } @else {
-            <markdown [data]="content()"></markdown>
+            <markdown [data]="content()" class="eb-markdown-content" />
           }
         </div>
 
@@ -42,8 +46,49 @@
               <span class="blog-detail__tag">#{{ tag }}</span>
             }
           </div>
+
+          <!-- Bottom Navigation -->
+          <ng-container *ngTemplateOutlet="navControls; context: { $implicit: 'footer' }" />
         </footer>
       </eb-card>
+
+      <!-- Reusable Navigation Template -->
+      <ng-template #navControls let-placement>
+        <div
+          class="blog-detail__nav"
+          [class.blog-detail__nav--header]="placement === 'header'"
+          [class.blog-detail__nav--footer]="placement === 'footer'"
+        >
+          @if (adjacentArticles().prev; as prev) {
+            <eb-button
+              variant="secondary"
+              [routerLink]="PUBLISHED_SLUGS.includes(prev.slug) ? ['/blog', prev.slug] : null"
+              class="blog-detail__nav-prev"
+              [ariaLabel]="t('blog.detail.previousArticle')"
+              [disabled]="!PUBLISHED_SLUGS.includes(prev.slug)"
+            >
+              <ng-container icon>
+                <eb-icon [name]="ICONS.ARROW_LEFT" size="sm" />
+              </ng-container>
+              {{ t('blog.detail.previousArticle') }}
+            </eb-button>
+          }
+          @if (adjacentArticles().next; as next) {
+            <eb-button
+              variant="secondary"
+              [routerLink]="PUBLISHED_SLUGS.includes(next.slug) ? ['/blog', next.slug] : null"
+              class="blog-detail__nav-next"
+              [ariaLabel]="t('blog.detail.nextArticle')"
+              [disabled]="!PUBLISHED_SLUGS.includes(next.slug)"
+            >
+              {{ t('blog.detail.nextArticle') }}
+              <ng-container icon>
+                <eb-icon [name]="ICONS.ARROW_RIGHT" size="sm" />
+              </ng-container>
+            </eb-button>
+          }
+        </div>
+      </ng-template>
     </article>
   }
 
