--- a/src/app/features/blog/blog-detail/blog-detail.component.scss
+++ b/src/app/features/blog/blog-detail/blog-detail.component.scss
@@ -93,6 +93,7 @@
     justify-content: space-between;
     align-items: center;
     gap: var(--space-4);
+    flex-wrap: wrap;
 
     &--footer {
       width: 100%;
